# iloc_simulator

./: CMakeLists.txt  README.md  exceptions.txt  sim
input/: costs.in  costs_table  e00.amarela  e01.amarela  e02.amarela  e03.amarela  e04.amarela  e05.amarela  e06.amarela  e07.amarela  e09.amarela  e10.amarela  e11.amarela  e12.amarela  e13.amarela  e14.amarela  e15.amarela  e16.amarela  e17.amarela  e18.amarela  e3-i46.iloc  e4-i47.iloc  e4-i48.iloc  i00.iloc  i01.iloc  i02.iloc  i03.iloc  i04.iloc  i05.iloc  i06.iloc  i07.iloc  i08.iloc  i09.iloc  i11.iloc  i12.iloc  i13.iloc  i14.iloc  i15.iloc  i16.iloc  i17.iloc  (+8 more)
input/02/: 00.iks.iloc  01.iks.iloc  02.iks.iloc  03.iks.iloc  05.iks.iloc  06.iks.iloc  07.iks.iloc  08.iks.iloc
input/02-eval/: e00.iks.iloc  e01.iks.iloc  e02.iks.iloc  e03.iks.iloc  e04.iks.iloc  e05.iks.iloc  e06.iks.iloc  e07.iks.iloc  e09.iks.iloc  e10.iks.iloc  e11.iks.iloc  e12.iks.iloc  e13.iks.iloc  e14.iks.iloc  e15.iks  e15.iks.iloc  e16.iks  e16.iks.iloc  e17.iks.iloc  e18.iks.iloc
src/: CMakeLists.txt  Doxyfile.in  Machine.cpp  Machine.hpp  Main.cpp  Makefile  Operation.cpp  Operation.hpp  Program.cpp  Program.hpp  README  SimulationError.cpp  SimulationError.hpp  Test.cpp  iloc.l  iloc.output  iloc.tab.c  iloc.tab.h  iloc.y  instruction.c  instruction.h  lex.yy.c  machine.c  machine.h  matts.i  operation.c  operation.h  sim  sim.c  sim.h  trial2.i  y.tab.c  y.tab.h
